Using jQuery backstretch to set background. Fix iPad issue.

--- a/static/scss/home.scss
+++ b/static/scss/home.scss
@@ -4,11 +4,6 @@
 #home {
   $margin-bottom: 75px;
 
-  background: url('/img/background.jpg') no-repeat center center fixed;
-  -webkit-overflow-scrolling: touch !important;
-  background-attachment: fixed !important;
-  background-size: cover !important;
-
   h1, h2, h4 {
     color: white;
   }
