--- a/static/scss/styles.scss
+++ b/static/scss/styles.scss
@@ -20,8 +20,6 @@ body {
 
 #container {
   margin-top: 43px;
-  overflow: auto;
-  overflow-y: scroll;
 }
 
 .nav h4 {
